samples/_failures_safe/1761407880_cc505b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34a8d709.c: In function ‘free_graph’:
./samples/SAFE/__tmp_34a8d709.c:163: error: expected ‘{’ at end of input
